# Colosseum

AirLib/include/vehicles/multirotor/api/: MultirotorRpcLibAdaptors.hpp
PythonClient/: pyproject.toml
PythonClient/airsim/: types.py
